--- a/My Library_OLD.bib
+++ b/My Library_OLD.bib
@@ -25085,8 +25085,8 @@ ISBN: 9781486307289},
 @techreport{Pillans2021,
 	title = {Assessing the effect of ongoing bycatch of sawfish in northern {Australia}},
 	author = {Pillans, R.D. and Hillary, R. and Patterson, T.},
-	year = {2022},
-	file = {Pillans et al. - 2021 - Assessing the effect of ongoing bycatch of sawfish.pdf:C\:\\Users\\myb\\Zotero\\storage\\7GDWM3YI\\Pillans et al. - 2021 - Assessing the effect of ongoing bycatch of sawfish.pdf:application/pdf},
+	year = {2021},
+	file = {PDF:C\:\\Users\\myb\\Zotero\\storage\\KEMYRZQ9\\Pillans et al 2021.pdf:application/pdf},
 }
 
 @article{Martin1988,
@@ -28769,55 +28769,4 @@ Volume: 1},
 	year = {2024},
 	pages = {611},
 	file = {Henderson et al. - 2024 - Long term declines in the functional diversity of .pdf:C\:\\Users\\myb\\Zotero\\storage\\HD9KXGYW\\Henderson et al. - 2024 - Long term declines in the functional diversity of .pdf:application/pdf},
-}
-
-@article{hilbornPrettyGoodYield2010,
-	title = {Pretty {Good} {Yield} and exploited fishes},
-	volume = {34},
-	copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
-	issn = {0308597X},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S0308597X09000682},
-	doi = {10.1016/j.marpol.2009.04.013},
-	abstract = {While much of traditional ﬁsheries theory has concentrated on maximum or optimum yield, the reality of ﬁsheries management is that biomass yield is only one of the several indicators of ﬁsheries performance, and desired outcomes generally only need to provide something near the maximum possible yield. A range of policies are explored to ﬁnd those that produce ‘‘Pretty Good Yield’’ deﬁned as sustainable yield at least 80\% of the maximum sustainable yield. Such yields are generally obtained over a broad range of stock sizes (20–50\% of unﬁshed stock abundance), and this range is not sensitive to the population’s basic life history parameters such as natural mortality rate, somatic growth rate, or age at maturity. The most important biological parameter determining this range is the intensity of recruitment compensation. Meta-analysis shows compensation is usually strong and there is reasonably little yield lost at what are now widely accepted deﬁnitions of overﬁshing or risk for most stocks. Similarly, maintaining stocks at 50\% of unﬁshed stock abundance for ecological or economic reasons results in little expected loss of yield.},
-	language = {en},
-	number = {1},
-	urldate = {2024-06-13},
-	journal = {Marine Policy},
-	author = {Hilborn, Ray},
-	month = jan,
-	year = {2010},
-	pages = {193--196},
-	file = {Hilborn - 2010 - Pretty Good Yield and exploited fishes.pdf:C\:\\Users\\myb\\Zotero\\storage\\BG8QZBIK\\Hilborn - 2010 - Pretty Good Yield and exploited fishes.pdf:application/pdf},
-}
-
-@article{nitschkeSpatiotemporalVariabilityDemersal2022,
-	title = {Spatio-temporal variability in the demersal fish assemblage on the outer continental shelf of the {Great} {Australian} {Bight}},
-	volume = {271},
-	issn = {02727714},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S0272771422001111},
-	doi = {10.1016/j.ecss.2022.107852},
-	abstract = {We examined spatial and temporal variations in the demersal fish assemblage on the continental shelf of the central Great Australian Bight to understand how the assemblage is affected by both fishing and environmental gradients. Data from the Great Australian Bight Trawl Sector (1988–2018) and fishery-independent trawl surveys (2005–2009, 2011, 2015, 2018) were used for the analyses. The independent survey data were used to analyse trends in overall species composition and abundances, while the commercial fishery data were used to extend the time series for the key commercial species, Deepwater Flathead (Platycephalus conatus) and Bight Redfish (Centroberyx gerrardi). The demersal fish assemblage was dominated by four commercial species: Deepwater Flathead, Bight Redfish, Ocean Jacket (Nelusetta ayraud), and Latchet (Pterygotrigla polyommata); and one bycatch species: Wide Stingaree (Urolophus expansus). Assemblage composition varied between day/night and along an east-west gradient. Survey abundance and commercial catch-per-unit-effort of several species declined at the end of the time series. Survey abundance was low in 2011, 2015, and 2018 for Bight Redfish and in 2015 and 2018 for Deepwater Flathead. Assemblage composition and catch rates of some species recorded in 2011, 2015, and 2018 were distinct from previous years, but the differences appear to reflect the longer gaps between these surveys and the combined effects of historical fishing pressure and environmental variability. Recent downward trends in the abundance indices of target species, as well as long-term changes in the assemblage, demonstrate the need for continued fishery-independent monitoring. The relative importance of fishing pressure, environmental variability, and other human activities in driving these changes warrant further investigation.},
-	language = {en},
-	urldate = {2024-06-17},
-	journal = {Estuarine, Coastal and Shelf Science},
-	author = {Nitschke, Joshua and Knuckey, Ian and Koopman, Matt and Hudson, Russell and Huveneers, Charlie and Grammer, Gretchen and Ward, Tim M.},
-	month = jul,
-	year = {2022},
-	pages = {107852},
-	file = {Nitschke et al. - 2022 - Spatio-temporal variability in the demersal fish a.pdf:C\:\\Users\\myb\\Zotero\\storage\\6TX95ULP\\Nitschke et al. - 2022 - Spatio-temporal variability in the demersal fish a.pdf:application/pdf},
-}
-
-@book{afmaHarvestStrategyFramework2009,
-	title = {Harvest {Strategy} {Framework} for the {Southern} and {Eastern} {Scalefish} and {Shark} {Fishery}, {September} 2009},
-	publisher = {Australian Fisheries Management Authority, Canberra},
-	author = {AFMA},
-	year = {2009},
-}
-
-@article{steerAssessmentSouthAustralian2020,
-	title = {Assessment of the {South} {Australian} {Marine} {Scalefish} {Fishery} in 2018},
-	language = {en},
-	author = {Steer, MA and Fowler, AJ and Rogers, PJ and Bailleul, F and Earl, J and Matthews, D and Drew, M and Tsolos, A},
-	year = {2020},
-	file = {Steer et al. - 2020 - Assessment of the South Australian Marine Scalefis.pdf:C\:\\Users\\myb\\Zotero\\storage\\YHEWJL2W\\Steer et al. - 2020 - Assessment of the South Australian Marine Scalefis.pdf:application/pdf},
 }
