--- a/WoE.Rmd
+++ b/WoE.Rmd
@@ -4,7 +4,7 @@ author: "Matias Braccini & Alex Hesp"
 date: "`r format(Sys.time(), '%B %Y')`"
 output:
   officedown::rdocx_document  
-bibliography: 'C:/Users/myb/OneDrive - Department of Primary Industries and Regional Development/Matias/Analyses/Build documents/Weight of Evidence/My Library.bib'
+bibliography: 'C:/Users/myb/OneDrive - Department of Primary Industries and Regional Development/Matias/Analyses/Build-Documents/My Library.bib'
 knit: (function(inputFile, encoding) {
   rmarkdown::render(inputFile, encoding = encoding, output_dir = "C:/Users/myb/OneDrive - Department of Primary Industries and Regional Development/Matias/Reports/WoE Advice/2023") })
 
@@ -103,9 +103,9 @@ For non-indicator species, the current assessment is based on catch-only modelli
 # Future Monitoring & Assessment
 Additional data (e.g., provision of information on mortality for a certain period, as could be generated from representative age composition data), would assist in reducing model uncertainties, particularly for those species for which reconstructed catches are not negligible but only catch and life history information is available. Also, life history information for most species is not stock-specific, and in a few cases, not species-specific. Hence, targeted collection of biological information (reproduction, growth) would assist future assessments.
 
-The reliance on fishery-dependent catch rate data to inform depletion levels is evident for all species except sandbar shark for which reliable fishery-independent data are available. A long-term monitoring program, particularly in temperate WA would also assist in reducing model uncertainties. This would be particular useful for gummy, whiskery and dusky sharks, noting that some of the integrated model fit diagnostics were not passed (e.g. retrospective analysis and hindcasting for gummy shark) due to data limitations or could not be conducted, such as retrospective analysis and hindcasting, due to lack of recent data (e.g. dusky shark).
+The reliance on fishery-dependent catch per unit of effort (CPUE) data to inform depletion levels is evident for all species except sandbar shark for which reliable fishery-independent data are available. A long-term monitoring program, particularly in temperate WA would also assist in reducing model uncertainties. This would be particular useful for gummy, whiskery and dusky sharks, noting that some of the integrated model fit diagnostics were not passed (e.g. retrospective analysis and hindcasting for gummy shark) due to data limitations or could not be conducted, such as retrospective analysis and hindcasting, due to lack of recent data (e.g. dusky shark).
 
-From a modelling viewpoint, future surplus production models could explore the use of JABBA-select to allow incorporating catch rate series from fisheries with different selectivity schedules. Also, future integrated populations models should explicitly account for the spatial structure of the TDGDLF and the use of two different mesh sizes (6.5 and 7 inch).
+From a modelling viewpoint, future surplus production models could explore the use of JABBA-select to allow incorporating CPUE series from fisheries with different selectivity schedules. Also, future integrated populations models should explicitly account for the spatial structure of the TDGDLF and the use of two different mesh sizes (6.5 and 7 inch).
 
 Finally, a formal harvest strategy that considers and defines reference points and control rules for managing the resource is required because in the current management settings there is currently a single reference point for assessing shark species (i.e. 40% unfished biomass) which is not explicitly defined as a target, threshold or limit. In addition, unlike other resources for which reference points relate to the spawning biomass (equivalent to female mature biomass for sharks), the current reference point in the TDGDLF relates to total biomass. A successful harvest strategy could be determined through Management Strategy Evaluation.  
 
@@ -133,8 +133,6 @@ path=paste(Model.outputs.an,'PSA/Figure_PSA.tiff',sep='')
 
 ```
 ![Figure 3. PSA for assessed species. Also shown is the resulting vulnerability threshold. The size of the species name label is proportional to the vulnerability score.](`r path`){width=800px}
-
-Statewide, most of the shark and ray catch taken in WA originates from the state's shark fisheries (Figure A.4.1). Hence, analysis of spatio-temporal catch and effort dynamics focused on these fisheries. 
 
 <br>
 
@@ -253,11 +251,11 @@ Tab%>%
 <br>
 
 # Appendix 1. Consequence, Likelihood and Risk Levels (based on AS 4360 / ISO 31000) 
-Following @Fletcher2015, fishing sustainability risk was defined as negligible, low, medium, high or severe. These risk levels were calculated as the product of consequence and likelihood (see definition below). The likelihood of each consequence level was calculated for each line of evidence as follows. 
+Following @Fletcher2015, fishing sustainability risk was defined as negligible, low, medium, high or severe. These risk levels were calculated as the product of consequence and likelihood (see definition below). The likelihood of each consequence level was calculated for each line of detailed below. 
 
-For spatio-temporal changes in catch and effort, likelihood values were derived from spatial and temporal dynamics of the number of blocks fished in total and with catch for each assessed species as well as market dynamics and legislated species protection (Appendix 6). 
+For spatio-temporal changes in catch and effort, likelihood values were derived from spatial and temporal dynamics of the total number of blocks fished within each species' core area, the proportion of blocks with catch as well as market dynamics and legislated species protection (Appendix 6). 
 
-For the data-limited COMs analyses, likelihood values were calculated based on probabilities of the total catch of a species being above, between or below catch reference points. Rather than using a point estimate of total catch, a normal distribution was used with mean and standard deviation set at the mean and standard deviation of the observed total catch for the last five years. For each species, the limit reference point for catch was set to the median value for MSY produced by COMs models, i.e. the limit reference point is considered to be breached if there is greater than 50% probability of MSY being exceeded. The threshold reference for catch was set to 0.8 of the median value for MSY produced by the COMs models, i.e. the threshold is considered to be breached if there is greater than 20% probability (and thus still appreciable risk) of MSY being exceeded. These limit and threshold catch reference points were derived based on the theoretical expectation that, for any stock, catches above MSY, over any period other than the short term, will result in overfishing and should thus be avoided (@Martell2012). The target reference point for catch was set to 0.5 of the median value for MSY produced by COMs models, i.e. to a level of catch this is much lower than the median expectation for MSY and, taking into account full uncertainty for MSY from these data-limited approaches, was able to be shown for all species in this assessment to have zero chance of exceeding MSY.
+For the data-limited COMs analyses, likelihood values were calculated based on probabilities of the total catch (for the last five years) of a species being above, between or below catch reference points. Rather than using a point estimate of total catch, a normal distribution was used with mean and standard deviation set at the mean and standard deviation of the observed total catch. For each species, the limit reference point for catch was set to the median value for MSY produced by the COMs models, i.e. the limit reference point is considered to be breached if there is greater than 50% probability of MSY being exceeded. The threshold reference point was set to 0.8 of the MSY median value produced by the COMs models, i.e. the threshold is considered to be breached if there is greater than 20% probability (and thus still appreciable risk) of MSY being exceeded. These limit and threshold catch reference points were derived based on the theoretical expectation that, for any stock, catches above MSY, over any period other than the short term, will result in overfishing and should thus be avoided (@Martell2012). The target reference point was set to 0.5 of the MSY median value produced by the COMs models, i.e. to a level of catch that is much lower than the median expectation for MSY and, taking into account full uncertainty for MSY from these data-limited approaches, was able to be shown for all species in this assessment to have zero chance of exceeding MSY.
 
 For the state-space surplus production and integrated models, likelihood levels were derived from the model outputs. Risk scores were calculated for `r year.current` and `r year.future`. For this, the population models were projected for five years assuming a constant catch set at the average catch of the last five years. 
 
@@ -353,7 +351,7 @@ for(i in 1:length(plots))
   Titl=gsub("\\..*", "", plots[i])
   if(Titl=="Dusky whaler") Titl="Dusky shark"
   if(Titl=="Hammerhead sharks") Titl="Hammerheads"
-  cat(sprintf('![%s](%s)', paste('Figure A.3.1.',i,'. ',Titl,'. Spatial distribution of nominal catch rates (kg per km gillnet hour) for the TDGDLF. Also shown are the annual sea surface temperature anomalies.',sep=''), 
+  cat(sprintf('![%s](%s)', paste('Figure A.3.1.',i,'. ',Titl,'. Spatial distribution of nominal catch per unit of effort (kg per km gillnet hour) for the TDGDLF. Also shown are the annual sea surface temperature anomalies.',sep=''), 
                filename), sep = '\n')
   cat("\n")
 }
@@ -390,16 +388,31 @@ knitr::include_graphics(paste(handl_OneDrive('Management/Sharks/Timeline managem
 <br>
 
 
-# Appendix 6. Spatio-temporal changes in fishing effort and reported catch for shark fisheries
+# Appendix 6. Spatio-temporal changes in fishing effort and reported catch
+
+Most of the shark and ray catch taken in WA originates from the state's shark fisheries (Figure A.4.1). Hence, analysis of spatio-temporal catch and effort dynamics focused on these fisheries. 
+
+The spatio-temporal distribution of effort is shown in Figure A.6.1. Effort values are displayed in relative terms (i.e., relative to the maximum) because the NSF used predominantly demersal longline fishing gear and the TDGDLF used predominantly demersal gillnet fishing gear.
+
+```{r, echo=FALSE}
+path=paste(Model.outputs.RAR,'/Spatio.temporal.effort.tiff',sep='')
+```
+![Figure A.6.1. Reported effort dynamics for WA’s shark fisheries. Heatmap of the distribution of relative effort (hook days for the NSF and km gillnet days for the TDGDLF) by 5-year intervals and 60 nm blocks.](`r path`){width=800px}
+
+The spatio-temporal distribution of reported catch for the TDGDLF is shown in Figures A.6.2 and A.6.3 for indicator and non-indicator species, respectively. 
+
+For each assessed species, a single Consequence and Likelihood value was selected based on the spatial and temporal dynamics of effort, the total number of blocks fished and the proportion of blocks fished with catch within each species core area. Market dynamics and species protection were also taken in consideration. For angel sharks, most of the catch has been taken by the Great Australian Bight (GAB) Trawl Fishery (managed by the Commonwealth) whereas for copper shark a large proportion of the catch has been taken by South Australia's Marine Scale Fishery (SA MSF). No spatio-temporal catch distribution data were available from these fisheries. However, effort has substantially decreased in recent years due to the introduction of a range of management measures (@afmaHarvestStrategyFramework2009, @steerAssessmentSouthAustralian2020, @nitschkeSpatiotemporalVariabilityDemersal2022). 
+
+
 ```{r, echo=FALSE}
 path=paste(Model.outputs.RAR,'/Spatio.temporal.catch_Indicator.sp.tiff',sep='')
 ```
-![Figure A.6.1. Reported catch and effort dynamics for WA’s shark fisheries (indicator species). The left pane shows a heatmap of the distribution of relative effort (hook days for the NSF and km gillnet days for the TDGDLF) by 5-year intervals and 60 nm blocks. The right pane shows the proportion of blocks fished  with reported catch (primary y axis, red dots) with a trend line (red line) and the total number of blocks fished (secondary y axis, grey line) within the species core area for the TDGDLF. The inset in the right pane shows the species’ core area. Core area was defined as the spatial blocks accounting for 95% of the catch.](`r path`){width=800px}
+![Figure A.6.2. Reported catch dynamics for the TDGDLF (indicator species). Proportion of blocks fished with reported catch (primary y axis, red dots) and total number of blocks fished (secondary y axis, grey line) within the species core area. The inset shows the species distribution within WA (green polygon) reported in https://www.cmar.csiro.au/data/caab and the species’ core area (black dots) within the fished zones. Core area was defined as the spatial blocks accounting for 95% of the catch.](`r path`){width=800px}
 
 ```{r, echo=FALSE}
 path=paste(Model.outputs.RAR,'/Spatio.temporal.catch_Other.sp.tiff',sep='')
 ```
-![Figure A.6.2. Effort and reported catch dynamics for WA’s shark fisheries (non-indicator species). The left pane shows a heatmap of the distribution of relative effort (hook days for the NSF and km gillnet days for the TDGDLF) by 5-year intervals and 60 nm blocks. The right pane shows the proportion of blocks fished  with reported catch (primary y axis, red dots) with a trend line (red line) and the total number of blocks fished (secondary y axis, grey line) within the species core area for the TDGDLF. The inset in the right pane shows the species’ core area. Core area was defined as the spatial blocks accounting for 95% of the catch.](`r path`){width=800px}
+![Figure A.6.3. Reported catch dynamics for the TDGDLF (non-indicator species). Proportion of blocks fished with reported catch (primary y axis, red dots) and total number of blocks fished (secondary y axis, grey line) within the species core area. The inset shows the species distribution within WA (green polygon) reported in https://www.cmar.csiro.au/data/caab and the species’ core area (black dots) within the fished zones. Core area was defined as the spatial blocks accounting for 95% of the catch.](`r path`){width=800px}
 
 <br>
 
@@ -461,7 +474,7 @@ for(i in 1:length(Species.with.length.comp))
 
 <br>
 
-# Appendix 8. Standardised catch rates
+# Appendix 8. Standardised catch per unit of effort
 Abundance indices are available for a subset of species from standardising the commercial catch and effort from the TDGDLF (kg per km gillnet-hours) and from the longline abundance survey conducted in north-western WA (number of individuals per 50 hook-hours). The standardisation process is described in (@bracciniSpatialTemporalPatterns2021) for the fishery-dependent abundance index and in (@Braccini2020) for the fishery-independent abundance index.
 
 ```{r, results='asis'}
@@ -475,7 +488,7 @@ Species.with.abundance=c(Species.with.abundance[sort.species.id],Species.with.ab
 
 for(i in 1:length(Species.with.abundance)){
   Titl=gsub(".*\\.", "", Species.with.abundance[i])  
-       cat(sprintf('![%s](%s)', paste('Figure A.8.',i,'. ',Titl,'. Standardised catch rates (CPUE, mean and 95% CI).',sep=''), 
+       cat(sprintf('![%s](%s)', paste('Figure A.8.',i,'. ',Titl,'. Standardised catch per unit of effort (CPUE, mean and 95% CI).',sep=''), 
                  paste(Model.outputs.an,paste(Species.with.abundance[i],this.yr,
                       '1_Inputs/Visualise data/All cpues.tiff',sep='/'),sep='')), sep = '\n')
   cat("\n")
@@ -697,24 +710,24 @@ path=paste(Model.outputs.RAR,'/Catch_vs_MSY_catch.only_Other.sp.tiff',sep='')
 <br>
 
 # Appendix 11. State-space surplus production modelling
-State-space surplus production models were fitted to catch and catch rate series derived from standardised commercial catch and effort (@bracciniSpatialTemporalPatterns2021) or a fishery-independent survey (@Braccini2020) using JABBA, Just Another Bayesian Biomass Assessment (@winkerJABBAJustAnother2018). The survey collects abundance data in numbers so it was converted to biomass by multiplying numbers by the reported average annual weight (@Braccini2020). A full description of the JABBA model (state-space implementation, prior specification options, diagnostic tools, etc.) is available in (@winkerJABBAJustAnother2018). JABBA is implemented in R with a JAGS interface (@Plummer2003) to estimate the Bayesian posterior distributions using Markov Chains Monte Carlo (MCMC) simulations. A Pella-Tomlinson production function was used by setting the inflection point B~MSY~/K and converting this ratio into a shape parameter *m* that determines at which B/K ratio maximum surplus production is attained. Schaefer and Fox production functions were considered as sensitivity tests. We used two MCMC chains each of 30,000 iterations, sampled with a burn-in period of 5,000 iterations and thinning rate of five iterations (e.g., @Winker2019). Model diagnostics included Bayesian fit diagnostics (visualization of the MCMC chains, posterior densities, autocorrelation and the @Gelman2003 and @Geweke1992 diagnostics as implemented in the *ggmcmc* R package @FernandezMarin2016) and model goodness-of-fit, retrospective analysis and prediction skill as implemented in the *ss3diags* R package (@carvalhoCookbookUsingModel2021). Key priors required are *r*, K and B~0~/K whereas priors for B~MSY~/K, and process error were also specified (Table A.11.1). A lognormal distribution was used for *r* and K and a beta distribution was used for B~0~/K as it is considered to have better convergence properties than uniform priors (@winkerJABBAJustAnother2018). For *r*, the mean and CV were obtained from the demographic modelling. For K, the mean was set at the average of the uniform distribution used in the COMs, and the CV was prespecified at 200% (Winker et al., 2019). A uniform distribution, prespecified at the range used for the COMs, was considered as a sensitivity. For B~0~/K, the mean was prespecified the average of the lower and upper bounds of the B~0~/K distribution used in the COMs and the CV was calculated as the SD of those distribution over the mean. Process error was prespecified at 0.05, which assumes low stochastic variation in biomass given sharks productivity (Winker et al., 2019). We used the same B~MSY~/K values used in the DB-SRA modelling. 
+State-space surplus production models were fitted to catch and abundance series derived from standardised commercial catch and effort (@bracciniSpatialTemporalPatterns2021) or a fishery-independent survey (@Braccini2020) using JABBA, Just Another Bayesian Biomass Assessment (@winkerJABBAJustAnother2018). The survey collects abundance data in numbers so it was converted to biomass by multiplying numbers by the reported average annual weight (@Braccini2020). A full description of the JABBA model (state-space implementation, prior specification options, diagnostic tools, etc.) is available in (@winkerJABBAJustAnother2018). JABBA is implemented in R with a JAGS interface (@Plummer2003) to estimate the Bayesian posterior distributions using Markov Chains Monte Carlo (MCMC) simulations. A Pella-Tomlinson production function was used by setting the inflection point B~MSY~/K and converting this ratio into a shape parameter *m* that determines at which B/K ratio maximum surplus production is attained. Schaefer and Fox production functions were considered as sensitivity tests. We used two MCMC chains each of 30,000 iterations, sampled with a burn-in period of 5,000 iterations and thinning rate of five iterations (e.g., @Winker2019). Model diagnostics included Bayesian fit diagnostics (visualization of the MCMC chains, posterior densities, autocorrelation and the @Gelman2003 and @Geweke1992 diagnostics as implemented in the *ggmcmc* R package @FernandezMarin2016) and model goodness-of-fit, retrospective analysis and prediction skill as implemented in the *ss3diags* R package (@carvalhoCookbookUsingModel2021). Key priors required are *r*, K and B~0~/K whereas priors for B~MSY~/K, and process error were also specified (Table A.11.1). A lognormal distribution was used for *r* and K and a beta distribution was used for B~0~/K as it is considered to have better convergence properties than uniform priors (@winkerJABBAJustAnother2018). For *r*, the mean and CV were obtained from the demographic modelling. For K, the mean was set at the average of the uniform distribution used in the COMs, and the CV was prespecified at 200% (Winker et al., 2019). A uniform distribution, prespecified at the range used for the COMs, was considered as a sensitivity. For B~0~/K, the mean was prespecified the average of the lower and upper bounds of the B~0~/K distribution used in the COMs and the CV was calculated as the SD of those distribution over the mean. Process error was prespecified at 0.05, which assumes low stochastic variation in biomass given sharks productivity (Winker et al., 2019). We used the same B~MSY~/K values used in the DB-SRA modelling. 
 
 
-Standardisation of catch rates can yield very small CVs (as observed for the analysed species); hence, the minimum CV used in the models was extracted from fitting a simple smoother to the catch rate data (on the natural log scale) and estimating the residual variance (@Francis2011). A thorough description of this method can be found in (@courtneyStockSynthesisSS32017). 
+Standardisation of CPUE can yield very small CVs (as observed for the analysed species); hence, the minimum CV used in the models was extracted from fitting a simple smoother to the CPUE data (on the natural log scale) and estimating the residual variance (@Francis2011). A thorough description of this method can be found in (@courtneyStockSynthesisSS32017). 
 
-The construction of JABBA models was possible for a subset of species (copper, dusky, gummy, milk, sandbar, tiger and whiskery sharks) due to availability of reliable survey and catch rate series. 
+The construction of JABBA models was possible for a subset of species (copper, dusky, gummy, milk, sandbar, tiger and whiskery sharks) due to availability of reliable survey and CPUE series. 
 
-For spinner shark, TDGDLF catch rates were not considered to represent abundance trend as they tracked catch trends (Figures A.4.3, A.8.7). 
+For spinner shark, the TDGDLF CPUE was not considered to represent abundance trend as they tracked catch trends (Figures A.4.3, A.8.7). 
 
-For dusky shark, the reliability of the TDGDLF catch rate as an index of abundance is unclear. Due to the tight gillnet selectivity schedule of the mesh sizes used in the TDGDLF, the catch comprises mostly of 0+ and 1 year old individuals, potentially representing a recruitment index. However, between 1975 and 1985 catches of the NSF and ‘other’ fisheries (which caught adult individuals) moderately increased from 36 to 74 tonnes but the TDGDLF monthly catch rates substantially decreased (75% reduction). Also, overall fishery catches substantially increased after 1985 (Figure A.4.2) and these higher catch levels were able to be sustained, suggesting that recruitment was unlikely to have markedly declined between 1975 and 1985 as suggested by the TDGDLF catch rates (Figure A.8.2). Hence, if the TDGDLF catch rates was a recruitment index, a substantial recruitment reduction between 1975 and 1985 within the context of the species exploitation history would be biologically unfeasible. Furthermore, since the late 1980s, TDGDLF catch rates fluctuated showing no overall trend (hence no trend in recruitment) despite catches (of adults and juveniles) substantially increasing to a history peak in the late 1980s and then substantially decreasing due to management-driven effort reductions (Figures A.4.2, A.5). The fishery-independent survey is highly uncertain as only a few individuals are caught each year due to nature of the survey (20 fishing stations revisited annually) which is designed to target mostly sandbar sharks (Figure A.8.2). Hence, abundance series were considered unreliable and JABBA models were not built for dusky shark.
+For dusky shark, the reliability of the TDGDLF CPUE as an index of abundance is unclear. Due to the tight gillnet selectivity schedule of the mesh sizes used in the TDGDLF, the catch comprises mostly of 0+ and 1 year old individuals, potentially representing a recruitment index. However, between 1975 and 1985 catches of the NSF and ‘other’ fisheries (which caught adult individuals) moderately increased from 36 to 74 tonnes but the TDGDLF monthly CPUE substantially decreased (75% reduction). Also, overall fishery catches substantially increased after 1985 (Figure A.4.2) and these higher catch levels were able to be sustained, suggesting that recruitment was unlikely to have markedly declined between 1975 and 1985 as suggested by the TDGDLF CPUE (Figure A.8.2). Hence, if the TDGDLF CPUE was a recruitment index, a substantial recruitment reduction between 1975 and 1985 within the context of the species exploitation history would be biologically unfeasible. Furthermore, since the late 1980s, the TDGDLF CPUE fluctuated showing no overall trend (hence no trend in recruitment) despite catches (of adults and juveniles) substantially increasing to a history peak in the late 1980s and then substantially decreasing due to management-driven effort reductions (Figures A.4.2, A.5). The fishery-independent survey is highly uncertain as only a few individuals are caught each year due to nature of the survey (20 fishing stations revisited annually) which is designed to target mostly sandbar sharks (Figure A.8.2). Hence, abundance series were considered unreliable and JABBA models were not built for dusky shark.
 
-For sandbar shark, the TDGDLF monthly catch rate series was excluded from the analysis because it tracked the catch series (Figures A.4.2, A.8.4). Preliminary analysis including this catch series showed similar population trajectories albeit considerably more uncertain, displaying a sudden peak in relative biomass in 1986, not consistent with sandbar shark productivity. Hence, the TDGDLF monthly catch rate was considered unreliable as an index of abundance and not used in the JABBA models.
+For sandbar shark, the TDGDLF monthly CPUE series was excluded from the analysis because it tracked the catch series (Figures A.4.2, A.8.4). Preliminary analysis including this catch series showed similar population trajectories albeit considerably more uncertain, displaying a sudden peak in relative biomass in 1986, not consistent with sandbar shark productivity. Hence, the TDGDLF monthly CPUE was considered unreliable as an index of abundance and not used in the JABBA models.
 
-For gummy shark, the years 1975 to 1985 of the monthly catch rates series were not included because catch rates decreased by ~80% during this period following only a moderate increase in catches (Figures A.4.2, A.8.1) and the fleet was composed of a large number of vessels that fished mostly sporadically. 
+For gummy shark, the years 1975 to 1985 of the monthly CPUE series were not included because the CPUE decreased by ~80% during this period following only a moderate increase in catches (Figures A.4.2, A.8.1) and the fleet was composed of a large number of vessels that fished mostly sporadically. 
 
 For whiskery shark, changes in fishers' targeting behaviour (from whiskery to dusky sharks) in the early 1980s (@Simpfendorfer2000a) were modeled by the inclusion of two catchability coefficients for the periods 1975-1980 and 1984-2005. Finally, sensitivity tests were done to evaluate the effect of the assumed process error, *r*, production function and K prior (Table A.11.1).
 
-Finally, for TDGDLF catch rates derived from standardised commercial catch and effort data, the financial years 2007 and 2008 are considerably higher (~100%) than subsequent years for all species. This coincides with the transition of monthly to daily catch and effort reporting in WA which distorted the calculation of effort variables (@bracciniSpatialTemporalPatterns2021) and a period of stable of decreasing catches. Hence, these two years were removed from the catch rate series as they are most likely reflecting changes in the reporting of the effort variables used in the standardisations.
+Finally, for the TDGDLF CPUE derived from standardised commercial catch and effort data, the financial years 2007 and 2008 are considerably higher (~100%) than subsequent years for all species. This coincides with the transition of monthly to daily catch and effort reporting in WA which distorted the calculation of effort variables (@bracciniSpatialTemporalPatterns2021) and a period of stable of decreasing catches. Hence, these two years were removed from the CPUE series as they are most likely reflecting changes in the reporting of the effort variables used in the standardisations.
 
 <!---BLOCK_LANDSCAPE_START--->
 ```{r,echo=FALSE,ft.align="left"}
@@ -1073,11 +1086,11 @@ Tab=full_join(Tab1,Tab2,by=c("Range","Scenario","finyear","Model"))%>%
 
 
 # Appendix 12. Integrated population dynamics modelling   
-We built sex- and age-structured models using Stock Synthesis and time series of catch and available time series of catch rate, catch length composition and mean body weight. For sandbar shark, point estimates of F derived from mark-recapture (@McAuley2007b) were also included. The *r4ss* (@taylorVisualizingCatchatageModels2021) and *ss3diags* R packages were used for pre- and post-processing Stock Synthesis inputs and outputs. A full description of Stock Synthesis is available in (@methotStockSynthesisBiological2013). Below is a description of model inputs and assumptions.
+We built sex- and age-structured models using Stock Synthesis and time series of catch and available time series of abundance, catch length composition and mean body weight. For sandbar shark, point estimates of F derived from mark-recapture (@McAuley2007b) were also included. The *r4ss* (@taylorVisualizingCatchatageModels2021) and *ss3diags* R packages were used for pre- and post-processing Stock Synthesis inputs and outputs. A full description of Stock Synthesis is available in (@methotStockSynthesisBiological2013). Below is a description of model inputs and assumptions.
 
 Life history inputs (M~*a*~, fecundity, maturity, reproductive cycle length, growth, size at birth, length-weight) were sourced from the demographic and SSS modelling described above (Tables A.9.1, A.10.3, Figure A.12.1). Growth at age was assumed to follow the von Bertalanffy growth relationship. Mean length at age was assumed to follow a normal distribution with juvenile and adult CVs set at 0.14 and 0.1, respectively, based on the age-length data dispersion observed for gummy, dusky, whiskery and sandbar sharks. Fecundity was assumed to increase linearly with maternal length. For species when only a litter size range was reported, the intercept of the linear relationship was prespecified at the litter size mean and the slope was set at 0. The fecundity parameters were divided by the mean of the reproductive cycle length to calculate annual pup production. We assumed a Beverton-Holt stock-recruitment relationship parametrised as a function of lnRo, *h* and the standard deviation in recruitment ($\sigma_R$). Unexploited equilibrium recruitment was estimated whereas *h* was prespecified at the mean value used for SSS modelling (Table A.10.3). Deviates from the stock-recruit relationship were prespecified following examination of preliminary Stock Synthesis outputs with the *r4ss* package (e.g., @courtneyStockSynthesisSS32017). Preliminary examination with the *r4ss* package also allowed adjusting expected recruitment bias so that resulting recruitment on the standard scale is mean unbiased (@methotAdjustingBiasDue2011). These prespecified values are shown in Appendix 13. 
 
-The start and end years of the model were 1941 and 2021, respectively. Initial fishing mortality was not estimated as fishing was assumed to be negligible prior to 1941 (@Braccini2021). Available time series of catch, catch rates, length composition and mean body weight data (Figure A.12.2) were assigned to 'fleets' and 'surveys' (Table A.12.1). For dusky shark, abundance series were not considered for reasons explained in Appendix 11 so a catch-length model was constructed (@Rudd2021). Catch-length models were also built for smooth hammerhead and spinner shark because abundance time series were not available for smooth hammerhead and available TDGDLF catch rates were not considered to represent abundance trend for spinner shark as explained in Appendix 11.
+The start and end years of the model were 1941 and 2021, respectively. Initial fishing mortality was not estimated as fishing was assumed to be negligible prior to 1941 (@Braccini2021). Available time series of catch, abundance, length composition and mean body weight data (Figure A.12.2) were assigned to 'fleets' and 'surveys' (Table A.12.1). For dusky shark, abundance series were not considered for reasons explained in Appendix 11 so a catch-length model was constructed (@Rudd2021). Catch-length models were also built for smooth hammerhead and spinner shark because abundance time series were not available for smooth hammerhead and available TDGDLF CPUE was not considered to represent abundance trend for spinner shark as explained in Appendix 11.
 
 Gear selectivity estimates for the main fleets capturing the assessed species were only available or could be estimated for dusky, gummy, milk, sandbar, spinner and whiskery sharks, and smooth hammerhead. Hence, Stock Synthesis models were built for these species only and species. Logistic and dome-shaped selectivity functions were assumed based on fleet and species characteristics (Appendix 13). For the southern shark fisheries, which use predominately gillnets, dome-shaped selectivity parameters were mostly estimated using the empirical estimates derived by (@Kirkwood1986a, @Simpfendorfer1998c, @McAuley2007a, @Braccini2022) as initial values although for spinner shark and smooth hammerhead they were mostly prespecified due to data limitations. For the northern shark fisheries, which used predominately hooks, logistic selectivity parameters were estimated for milk shark or prespecified at 50% length at maturity for spinner shark, as mostly adult individuals were caught by these fisheries. For the other species taken in the northern shark fisheries, dome-shaped selectivity was assumed given their large size and capacity to bend hooks, which was reflected in the small number of large individuals in the length composition. For the Indonesian, Taiwanese and other fleets, selectivity mirrored the northern shark fisheries selectivity. For dusky shark, given the current maximum retention size limit (70 cm inter dorsal length), a retention function was implemented with discard mortality pre-specified at 60% (@bracciniHighPostcaptureSurvival2012). Sex-specific length composition from the northern and southern shark fisheries were collected by onboard observers as fork length (FL) (@Braccini2016b). This was input into Stock Synthesis as total length (TL) applying published conversion factors (@bartesLengthLengthRelationships2023). For each fleet, only years with at least 150 observations were included. The TL data were compiled in length bins of 5 cm. Due to the limited number of observations by sex, male and female length composition was combined for milk shark for the northern shark fisheries and the survey, for dusky shark for the survey, and for smooth hammerhead for the southern shark fisheries. Male selectivity was estimated as a female selectivity offset for sandbar shark for the northern shark fisheries and for whiskery and gummy sharks for the southern shark fisheries. For other species/fleets, males and females were assumed to have equal selectivity. 
 
